tz-local/resource/consul/ca/consul-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  volumes:
  - name: consul-ca-cert
    secret:
      secretName: consul-ca-cert
  hostNetwork: false
  containers:
  - name: consul-test-pod
    image: alpine
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 24h; done"]
    volumeMounts:
    - name: consul-ca-cert
      mountPath: /consul/tls/ca
